# mmpp

./: .gitignore  Readme.md
Doc_rus/: Readme.tex
Doc_rus/Tech_report/: Report_MMPP.tex  ed.sty
MMPP:lib/: Readme.md  common.h  libmmpp.c  libmmpp.h  tty_procs.h
MMPP:lib/examples/: templatecmdlnopts.c  tmcmdlnopts.c  wheels.c  wheelscmdlnopts.c  wheelscmdlnopts.h
MMPP_control/: MMPP_control.c.tags  MMPP_control.config  MMPP_control.files  Makefile  Readme  Readme.md  cmdlnopts.c  cmdlnopts.h  main.c  mmppco.geanypro  tty_procs.c  tty_procs.h  usefull_macros.c  usefull_macros.h
MMPP_control/new/: Readme.md  cmdlnopts.c  main.c  tty_procs.c
MMPP_lib/: CMakeLists.txt  common.h  hidmanage.c  hsfw.h  libmmpp.c  libmmpp.h  mmpp.pc.in  tty_procs.c  tty_procs.h
MMPP_lib/examples/: CMakeLists.txt  move.c  movecmdlnopts.c  movecmdlnopts.h  template.c  templatecmdlnopts.h  tm.c  tmcmdlnopts.c  tmcmdlnopts.h  wheels.c
electronics/: DRV8825mod.pro  DRV8825mod.sch  a3212lh.lib  buttons-cache.lib  buttons.kicad_pcb  buttons.net  buttons.pro  buttons.sch  drv8825.lib  hall-cache.lib  hall.kicad_pcb  hall.net  hall.pro  hall.sch  steppers-B.Cu.gbr  steppers-B.Mask.gbr  steppers-B.SilkS.gbr  steppers-F.Cu.gbr  steppers-F.Mask.gbr  steppers-F.SilkS.gbr  steppers-NPTH-drl_map.gbr  steppers-cache.lib  steppers-drl_map.gbr  steppers-rescue.lib  steppers.csv  steppers.kicad_pcb  steppers.net  steppers.pro  steppers.sch  steppers.xml  steppersBOM.ods  steppers_handmade.kicad_pcb  sym-lib-table  usbbrd-cache.lib  usbbrd.kicad_pcb  usbbrd.net  usbbrd.pro  usbbrd.sch
(+23 files in other folders)
